--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qdb",
+  "name": "queue-db",
   "version": "1.0.0",
   "description": "A lightweight and fast queue database server with WebSocket support for real-time data streaming",
   "main": "dist/index.js",
@@ -17,8 +17,7 @@
     "dev:watch": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' -r tsconfig-paths/register src/app.ts",
     "build": "tsc",
     "test": "jest",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test"
+    "prepare": "npm run build"
   },
   "keywords": [
     "database",
