--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "queue-db",
-  "version": "1.0.0",
+  "name": "queuedb",
+  "version": "1.0.1",
   "description": "A lightweight and fast queue database server with WebSocket support for real-time data streaming",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
