--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "queuedb",
   "version": "1.1.9",
+  "bin": {
+    "qdb": "./bin/qdb.js"
+  },
   "description": "A lightweight and fast queue database server with WebSocket support for real-time data streaming",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -52,6 +55,7 @@
     "@types/ws": "^8.18.0",
     "auth-validify": "^1.0.5",
     "bcrypt": "^5.1.1",
+    "commander": "^14.0.2",
     "module-alias": "^2.2.3",
     "sqlite3": "^5.1.7",
     "ws": "^8.18.1"
