feat: Configure npm for GitHub Packages, ignore local .npmrc, and streamline package.json.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
   ],
   "author": "Emmanuel Bankole",
   "license": "MIT",
-  "repository": "https://github.com/codewithdripzy/qdb-server.git",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codewithdripzy/qdb-server.git"
+  },
   "bugs": {
     "url": "https://github.com/codewithdripzy/qdb-server/issues"
   },
